# tile

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  RELEASING.md  chatgpt-subscription-implementation-plan.md  codex-plan.md  main.py  pyproject.toml  settings.py  todos.md
.githooks/: pre-commit
agent/: __init__.py  agent.py  loop.py  prompt.py  runtime.py  tool_executor.py  types.py
ai/: conversation.py  types.py
docs/: openai-stream-event-lifecycle.md
examples/: local_runner.py  settings.py
llm/: __init__.py  openai_client.py  types.py
ori/: __init__.py  agent.py  events.py  prompt.py  runtime.py  tool_executor.py  tool_truncation.py
roadmaps/: plan.local.md
tests/: conftest.py  test_agent.py  test_agent_loop.py  test_ai_types.py  test_bash_tool.py  test_conversation_models.py  test_edit_tool.py  test_executables.py  test_find_tool.py  test_grep_tool.py  test_history_stores.py  test_image_processing.py  test_lifecycle.py  test_llm_types.py  test_local_runner.py  test_ls_tool.py  test_openai_client.py  test_openai_provider.py  test_openai_responses.py  test_openai_sdk_event_adapter.py  test_openai_serialization.py  test_openai_stream_assembler.py  test_openai_subscription_event_adapter.py  test_output_accumulator.py  test_prompt.py  test_public_imports.py  test_read_tool.py  test_result.py  test_run.py  test_run_stores.py  test_runtime.py  test_runtime_telemetry.py  test_telemetry.py  test_telemetry_contracts.py  test_tool_executor.py  test_tools_registry.py  test_truncation.py  test_ui_app.py  test_ui_textual_driver.py  test_ui_widgets.py  (+1 more)
tile/: __init__.py  _sqlite.py  agent.py  events.py  lifecycle.py  prompt.py  result.py  runtime.py  tool_executor.py
tools/: __init__.py  types.py
ui/: app.py  (+4 more)
(+130 files in other folders)
