[project]
name = "piy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]
