[project]
name = "ori-runtime"
version = "0.1.0"
description = "A small Python-native runtime for tool-using agent sessions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
pythonpath = ["."]
