[project]
name = "tile-runtime"
version = "0.1.0"
description = "A small Python-native runtime for tool-using agent sessions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tile"
module-root = ""
